using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace Inputs{
    public interface IGetButton{
        
    } 
}
